--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,9 +24,9 @@ requirements:
     - pip
   run:
     - python
-    - cfdm ==1.8.3
-    - cftime >=1.1.1
-    - cfunits >=3.2.5
+    - cfdm >=1.8.3,<1.9
+    - cftime >=1.1.3
+    - cfunits >=3.2.7
     - netcdf4 >=1.5.3
     - numpy >=1.15
     - psutil >=0.6.0
