--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [win or py2k]
+  skip: true  # [win or py<35]
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
@@ -24,9 +24,9 @@ requirements:
     - pip
   run:
     - python
-    - cfdm >=1.8.5,<1.9
-    - cftime >=1.1.3
-    - cfunits >=3.2.7
+    - cfdm >=1.8.6.0,<1.8.7.0
+    - cftime >=1.2.1
+    - cfunits >=3.2.9
     - netcdf4 >=1.5.3
     - numpy >=1.15
     - psutil >=0.6.0
