--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "cf-python" %}
 {% set version = "3.13.0" %}
+{% set build = 1 %}
 
 
 package:
@@ -11,7 +12,7 @@ source:
   sha256: 8d7f82a9563c0ae46c2725faeca43ee3a2db12a9b75c5a819bcb1b5ef107f322
 
 build:
-  number: 0
+  number: {{ build }}
   skip: true  # [win or py<35]
   script: {{ PYTHON }} -m pip install . -vv
 
