added UM/PP library test

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,6 +46,7 @@ test:
     - cf
   commands:
     - pip check
+    - python -c "import unittest; from cf.test import test_pp; unittest.main(test_pp)"
   requires:
     - pip
 
