patch GCC in makefile for linux build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,8 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: 8d7f82a9563c0ae46c2725faeca43ee3a2db12a9b75c5a819bcb1b5ef107f322
+  patches:
+    - 0001-Fix-gcc_path-umread_lib-linux.patch # [linux]
 
 build:
   number: {{ build }}
