add scipy to run all tests

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,6 +41,7 @@ test:
     - python -c "from cf.test import run_tests; run_tests.run_test_suite_setup_0(); run_tests.run_test_suite_setup_1(); run_tests.run_test_suite()"
   requires:
     - pip
+    - scipy
 
 about:
   home: https://pypi.org/project/cf-python/
