--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,12 +26,13 @@ requirements:
     - pip
   run:
     - python
-    - cfdm >=1.9.0.0,<1.9.1.0
+    - cfdm >=1.9.0.4,<1.9.1.0
     - cftime >=1.5.0
-    - cfunits >=3.3.3
+    - cfunits >=3.3.4
     - netcdf4 >=1.5.4
     - numpy >=1.15
     - psutil >=0.6.0
+    - packaging >=20.0
 
 test:
   imports:
