--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,12 +26,13 @@ requirements:
     - pip
   run:
     - python
-    - cfdm >=1.9.0.4,<1.9.1.0
-    - cftime >=1.5.0
-    - cfunits >=3.3.4
     - netcdf4 >=1.5.4
-    - numpy >=1.15
+    - cftime >=1.6.0
+    - numpy >=1.22
+    - cfdm >=1.10.0.2,<1.10.1.0
     - psutil >=0.6.0
+    - cfunits >=3.3.4
+    - dask-core >=3.3.4
     - packaging >=20.0
 
 test:
