--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,13 +36,21 @@ requirements:
     - packaging >=20.0
 
 test:
+  source_files:
+    - cf/test/
   imports:
     - cf
   commands:
     - pip check
-    - python -c "import unittest; from cf.test import test_pp; unittest.main(test_pp)"
+    - pushd cf/test && python create_test_files.py && python setup_create_field.py && python -c "import unittest; from cf.test import test_pp; unittest.main(test_pp)"
   requires:
     - pip
+    - pytest
+    - pycodestyle
+    - esmpy
+    - mpich
+    - pytest-json-report
+    - scipy
 
 about:
   home: https://pypi.org/project/cf-python/
