--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,9 +14,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [win or py<=39]
-  # This one is not in the metadata, but the cfdm numpy<2 restriction makes it unsolvable.
-  skip: true  # [py>312]
+  skip: true  # [win or py<311]
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
