--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,1 @@
-* @davidhassell @valeriupredoi @ocefpaf
-* @sadielbartholomew @valeriupredoi @ocefpaf
+* @davidhassell @sadielbartholomew @valeriupredoi @ocefpaf
